Overflow fixed
Unnecessary overflow definitions removed and overflow:auto introduced so
that iOS also works properly.

--- a/web/css/common.css
+++ b/web/css/common.css
@@ -178,12 +178,12 @@ html,body {
     border: none;
     top: 0;
     left: 0;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 body {
     width: 100em;
     max-width: 100%;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     background-image: url('../img/bokeh.jpg');
     background-size: cover;
 }
