--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -10,6 +10,9 @@ div#main {
     display: block;
     margin: auto;
     text-align: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 img#contentBackground {
     position: relative;
